--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quizalize Answer Analyzer</title>
+    <title>Quizalize Deblocked</title>
     <style>
         :root {
             --bg-color: #1a1a1a;
@@ -163,9 +163,9 @@
 <body>
 
     <div class="container">
-        <h1>Quizalize Answer Analyzer</h1>
+        <h1>Quizalize Deblocked</h1>
         <div class="input-group">
-            <input type="text" id="quizUrlInput" placeholder="Paste the Quizalize quiz link here...">
+            <input type="text" id="quizUrlInput" placeholder="yo paste your ENTIRE URL link in here">
             <button id="getAnswersBtn">Get Answers</button>
         </div>
 
